# digital_pheromone_mas

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  RESEARCHPAPER.md  generate_paper_figures.py  paper_draft.md  requirements.txt  run_windows.bat  setup.py  temp_config.yaml  temp_config_proposed_0.yaml  test_pheromone_fix.py  test_state_updates.py  training_summary.txt
.claude/: settings.local.json
.cursor/rules/: mainrule.mdc
config/: config.yaml  experiment_config.yaml  quick_experiment_config.yaml
cpp_backend/: CMakeLists.txt  build.sh
cpp_backend/bindings/: pybind_module.cpp
cpp_backend/include/: field_operations.hpp  message_codec.hpp  spatial_index.hpp  thread_pool.hpp
cpp_backend/src/: field_operations.cpp  message_codec.cpp  spatial_index.cpp  thread_pool.cpp
cpp_optimized_results/: performance_results.json
performance_comparison/: benchmark_comparison.py  performance_comparison_visualizer.py  performance_profiler.py  run_profiling_example.sh
performance_comparison/profiling_results_python/: PERFORMANCE_REPORT.md  bottleneck_analysis.json  performance_metrics.json  raw_metrics.pkl
portfolio/: ARCHITECTURE_VISUALIZATION_PROMPT.md  CPP_IMPLEMENTATION_PORTFOLIO.md  PROJECT_PORTFOLIO.md
progress_doc/: ARCHITECTURE_AND_BOTTLENECKS.md  C++_OPTIMIZATION_DELIVERABLES.md  CODEBASE_EXPLORATION_INDEX.md  CPP_IMPLEMENTATION_GUIDE.md  CPP_OPTIMIZATION_REPORT  CPP_OPTIMIZATION_STATUS.md  EXPLORATION_SUMMARY.md  INTEGRATED_QUICK_EXECUTION_GUIDE.md  PERFORMANCE_OPTIMIZATION_README.md  PHASE1_COMPLETION_REPORT.md  PHASE2_COMPLETION_REPORT.md  PHASE3_COMPLETION_REPORT.md  QUICK_REFERENCE.txt
research_doc/: RESEARCHPAPER.md  RESEARCH_COMPLIANCE_REPORT.md
src/core/: agent.py  environment.py  field_operations_wrapper.py  message_codec_wrapper.py  pheromone_vector.py  spatial_index_wrapper.py  trainer.py
src/experiments/: dimension_ablation_study.py  run_comparison.py  run_experiment.py
src/models/: attention_network.py  baseline_models.py  diffusion_model.py
src/utils/: memory_manager.py  metrics.py  normalization.py  visualization.py
summaries/: 250825.txt  250826.txt
tests/: test_cpp_accelerators.py  test_field_operations.py  test_normalization.py  test_spatial_index.py
wandb/: latest-run
wandb/run-20250829_111141-p99fsl6v/: run-p99fsl6v.wandb
wandb/run-20250829_111141-p99fsl6v/files/: conda-environment.yaml  config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20251021_165608-zrv9a2xa/: run-zrv9a2xa.wandb
wandb/run-20251021_165608-zrv9a2xa/files/: conda-environment.yaml  config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20251021_172433-ubljatst/: run-ubljatst.wandb
wandb/run-20251021_172433-ubljatst/files/: conda-environment.yaml  config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20251021_203732-uo2a2olx/: run-uo2a2olx.wandb
wandb/run-20251021_203732-uo2a2olx/files/: conda-environment.yaml  config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20251021_204058-hqwhgy3g/: run-hqwhgy3g.wandb
wandb/run-20251021_204058-hqwhgy3g/files/: config.yaml  wandb-metadata.json
